src/scanparse/parser.output
Nonterminals useless in grammar

    ids
    monop
    binop
    exprs


Terminals unused in grammar

    FOR


Rules useless in grammar

  104 exprs: expr exprs
  105      | expr


Grammar

    0 $accept: program $end

    1 program: decls

    2 decls: decl decls
    3      | decl

    4 decl: globdef
    5     | globdecl
    6     | fundef

    7 globdecl: EXTERN datatype ID SEMICOLON
    8         | EXTERN datatype SQUAREBRACKET_L id_dims SQUAREBRACKET_R ID SEMICOLON

    9 globdef: datatype ID SEMICOLON
   10        | datatype SQUAREBRACKET_L exprs_dims SQUAREBRACKET_R ID SEMICOLON
   11        | datatype ID LET expr SEMICOLON
   12        | datatype SQUAREBRACKET_L exprs_dims SQUAREBRACKET_R ID LET expr SEMICOLON
   13        | EXPORT datatype ID SEMICOLON
   14        | EXPORT datatype SQUAREBRACKET_L exprs_dims SQUAREBRACKET_R ID SEMICOLON
   15        | EXPORT datatype ID LET expr SEMICOLON
   16        | EXPORT datatype SQUAREBRACKET_L exprs_dims SQUAREBRACKET_R ID LET expr SEMICOLON

   17 funbody: vardecls
   18        | stmts
   19        | fundefs
   20        | vardecls stmts

   21 fundefs: fundef fundefs
   22        | fundef

   23 fundef: datatype ID ROUNDBRACKET_L ROUNDBRACKET_R SEMICOLON
   24       | datatype ID ROUNDBRACKET_L ROUNDBRACKET_R CURLYBRACKET_L CURLYBRACKET_R
   25       | datatype ID ROUNDBRACKET_L ROUNDBRACKET_R CURLYBRACKET_L funbody CURLYBRACKET_R
   26       | datatype ID ROUNDBRACKET_L params ROUNDBRACKET_R SEMICOLON
   27       | datatype ID ROUNDBRACKET_L params ROUNDBRACKET_R CURLYBRACKET_L CURLYBRACKET_R
   28       | datatype ID ROUNDBRACKET_L params ROUNDBRACKET_R CURLYBRACKET_L funbody CURLYBRACKET_R
   29       | EXPORT datatype ID ROUNDBRACKET_L ROUNDBRACKET_R SEMICOLON
   30       | EXPORT datatype ID ROUNDBRACKET_L ROUNDBRACKET_R CURLYBRACKET_L CURLYBRACKET_R
   31       | EXPORT datatype ID ROUNDBRACKET_L ROUNDBRACKET_R CURLYBRACKET_L funbody CURLYBRACKET_R
   32       | EXPORT datatype ID ROUNDBRACKET_L params ROUNDBRACKET_R SEMICOLON
   33       | EXPORT datatype ID ROUNDBRACKET_L params ROUNDBRACKET_R CURLYBRACKET_L CURLYBRACKET_R
   34       | EXPORT datatype ID ROUNDBRACKET_L params ROUNDBRACKET_R CURLYBRACKET_L funbody CURLYBRACKET_R
   35       | EXTERN datatype ID ROUNDBRACKET_L ROUNDBRACKET_R SEMICOLON
   36       | EXTERN datatype ID ROUNDBRACKET_L params ROUNDBRACKET_R SEMICOLON

   37 funcall: ID ROUNDBRACKET_L args ROUNDBRACKET_R
   38        | ID ROUNDBRACKET_L ROUNDBRACKET_R

   39 vardecls: vardecl vardecls
   40         | vardecl

   41 vardecl: datatype ID SEMICOLON
   42        | datatype SQUAREBRACKET_L exprs_dims SQUAREBRACKET_R ID SEMICOLON
   43        | datatype ID LET expr SEMICOLON
   44        | datatype SQUAREBRACKET_L exprs_dims SQUAREBRACKET_R ID LET expr SEMICOLON

   45 args: arg COMMA args
   46     | arg

   47 arg: expr

   48 params: param COMMA params
   49       | param

   50 param: datatype ID
   51      | datatype SQUAREBRACKET_L id_dims SQUAREBRACKET_R ID

   52 exprs_dims: expr_dim COMMA exprs_dims
   53           | expr_dim

   54 id_dims: id_dim COMMA id_dims
   55        | id_dim

   56 id_dim: ID

   57 expr_dim: expr

   58 stmts: stmt stmts
   59      | stmt

   60 stmt: assign
   61     | expr SEMICOLON
   62     | DO block WHILE ROUNDBRACKET_L expr ROUNDBRACKET_R SEMICOLON
   63     | WHILE ROUNDBRACKET_L expr ROUNDBRACKET_R block
   64     | IF ROUNDBRACKET_L expr ROUNDBRACKET_R block
   65     | IF ROUNDBRACKET_L expr ROUNDBRACKET_R block ELSE block
   66     | RETURN SEMICOLON
   67     | RETURN expr SEMICOLON

   68 assign: varlet LET expr SEMICOLON

   69 block: CURLYBRACKET_L CURLYBRACKET_R
   70      | CURLYBRACKET_L stmts CURLYBRACKET_R

   71 varlet: ID

   72 cast: ROUNDBRACKET_L datatype ROUNDBRACKET_R expr

   73 expr: ROUNDBRACKET_L expr ROUNDBRACKET_R
   74     | cast
   75     | funcall
   76     | ID
   77     | constant
   78     | expr PLUS expr
   79     | expr MINUS expr
   80     | expr STAR expr
   81     | expr SLASH expr
   82     | expr PERCENT expr
   83     | expr LT expr
   84     | expr LE expr
   85     | expr GT expr
   86     | expr GE expr
   87     | expr EQ expr
   88     | expr NE expr
   89     | expr OR expr
   90     | expr AND expr
   91     | UMINUS expr
   92     | NEG expr

   93 constant: floatval
   94         | intval
   95         | boolval

   96 floatval: FLOAT

   97 intval: NUM

   98 boolval: TRUEVAL
   99        | FALSEVAL

  100 datatype: VOIDTYPE
  101         | INTTYPE
  102         | FLOATTYPE
  103         | BOOLTYPE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ROUNDBRACKET_L (258) 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 62 63 64 65 72 73
    ROUNDBRACKET_R (259) 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 62 63 64 65 72 73
    CURLYBRACKET_L (260) 24 25 27 28 30 31 33 34 69 70
    CURLYBRACKET_R (261) 24 25 27 28 30 31 33 34 69 70
    SQUAREBRACKET_L (262) 8 10 12 14 16 42 44 51
    SQUAREBRACKET_R (263) 8 10 12 14 16 42 44 51
    COMMA (264) 45 48 52 54
    SEMICOLON (265) 7 8 9 10 11 12 13 14 15 16 23 26 29 32 35 36 41 42 43 44 61 62 66 67 68
    MINUS (266) 79
    PLUS (267) 78
    STAR (268) 80
    SLASH (269) 81
    PERCENT (270) 82
    LE (271) 84
    LT (272) 83
    GE (273) 86
    GT (274) 85
    EQ (275) 87
    NE (276) 88
    OR (277) 89
    AND (278) 90
    NEG (279) 92
    TRUEVAL (280) 98
    FALSEVAL (281) 99
    LET (282) 11 12 15 16 43 44 68
    IF (283) 64 65
    ELSE (284) 65
    WHILE (285) 62 63
    DO (286) 62
    FOR (287)
    RETURN (288) 66 67
    EXPORT (289) 13 14 15 16 29 30 31 32 33 34
    EXTERN (290) 7 8 35 36
    BOOLTYPE (291) 103
    FLOATTYPE (292) 102
    INTTYPE (293) 101
    VOIDTYPE (294) 100
    NUM <cint> (295) 97
    FLOAT <cflt> (296) 96
    ID <id> (297) 7 8 9 10 11 12 13 14 15 16 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 41 42 43 44 50 51 56 71 76
    UMINUS (298) 91
    THEN (299)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <node> (46)
        on left: 1
        on right: 0
    decls <node> (47)
        on left: 2 3
        on right: 1 2
    decl <node> (48)
        on left: 4 5 6
        on right: 2 3
    globdecl <node> (49)
        on left: 7 8
        on right: 5
    globdef <node> (50)
        on left: 9 10 11 12 13 14 15 16
        on right: 4
    funbody <node> (51)
        on left: 17 18 19 20
        on right: 25 28 31 34
    fundefs <node> (52)
        on left: 21 22
        on right: 19 21
    fundef <node> (53)
        on left: 23 24 25 26 27 28 29 30 31 32 33 34 35 36
        on right: 6 21 22
    funcall <node> (54)
        on left: 37 38
        on right: 75
    vardecls <node> (55)
        on left: 39 40
        on right: 17 20 39
    vardecl <node> (56)
        on left: 41 42 43 44
        on right: 39 40
    args <node> (57)
        on left: 45 46
        on right: 37 45
    arg <node> (58)
        on left: 47
        on right: 45 46
    params <node> (59)
        on left: 48 49
        on right: 26 27 28 32 33 34 36 48
    param <node> (60)
        on left: 50 51
        on right: 48 49
    exprs_dims <node> (61)
        on left: 52 53
        on right: 10 12 14 16 42 44 52
    id_dims <node> (62)
        on left: 54 55
        on right: 8 51 54
    id_dim <node> (63)
        on left: 56
        on right: 54 55
    expr_dim <node> (64)
        on left: 57
        on right: 52 53
    stmts <node> (65)
        on left: 58 59
        on right: 18 20 58 70
    stmt <node> (66)
        on left: 60 61 62 63 64 65 66 67
        on right: 58 59
    assign <node> (67)
        on left: 68
        on right: 60
    block <node> (68)
        on left: 69 70
        on right: 62 63 64 65
    varlet <node> (69)
        on left: 71
        on right: 68
    cast <node> (70)
        on left: 72
        on right: 74
    expr <node> (71)
        on left: 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92
        on right: 11 12 15 16 43 44 47 57 61 62 63 64 65 67 68 72 73 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92
    constant <node> (72)
        on left: 93 94 95
        on right: 77
    floatval <node> (73)
        on left: 96
        on right: 93
    intval <node> (74)
        on left: 97
        on right: 94
    boolval <node> (75)
        on left: 98 99
        on right: 95
    datatype <cdatatype> (76)
        on left: 100 101 102 103
        on right: 7 8 9 10 11 12 13 14 15 16 23 24 25 26 27 28 29 30 31 32 33 34 35 36 41 42 43 44 50 51 72


State 0

    0 $accept: • program $end

    EXPORT     shift, and go to state 1
    EXTERN     shift, and go to state 2
    BOOLTYPE   shift, and go to state 3
    FLOATTYPE  shift, and go to state 4
    INTTYPE    shift, and go to state 5
    VOIDTYPE   shift, and go to state 6

    program   go to state 7
    decls     go to state 8
    decl      go to state 9
    globdecl  go to state 10
    globdef   go to state 11
    fundef    go to state 12
    datatype  go to state 13


State 1

   13 globdef: EXPORT • datatype ID SEMICOLON
   14        | EXPORT • datatype SQUAREBRACKET_L exprs_dims SQUAREBRACKET_R ID SEMICOLON
   15        | EXPORT • datatype ID LET expr SEMICOLON
   16        | EXPORT • datatype SQUAREBRACKET_L exprs_dims SQUAREBRACKET_R ID LET expr SEMICOLON
   29 fundef: EXPORT • datatype ID ROUNDBRACKET_L ROUNDBRACKET_R SEMICOLON
   30       | EXPORT • datatype ID ROUNDBRACKET_L ROUNDBRACKET_R CURLYBRACKET_L CURLYBRACKET_R
   31       | EXPORT • datatype ID ROUNDBRACKET_L ROUNDBRACKET_R CURLYBRACKET_L funbody CURLYBRACKET_R
   32       | EXPORT • datatype ID ROUNDBRACKET_L params ROUNDBRACKET_R SEMICOLON
   33       | EXPORT • datatype ID ROUNDBRACKET_L params ROUNDBRACKET_R CURLYBRACKET_L CURLYBRACKET_R
   34       | EXPORT • datatype ID ROUNDBRACKET_L params ROUNDBRACKET_R CURLYBRACKET_L funbody CURLYBRACKET_R

    BOOLTYPE   shift, and go to state 3
    FLOATTYPE  shift, and go to state 4
    INTTYPE    shift, and go to state 5
    VOIDTYPE   shift, and go to state 6

    datatype  go to state 14


State 2

    7 globdecl: EXTERN • datatype ID SEMICOLON
    8         | EXTERN • datatype SQUAREBRACKET_L id_dims SQUAREBRACKET_R ID SEMICOLON
   35 fundef: EXTERN • datatype ID ROUNDBRACKET_L ROUNDBRACKET_R SEMICOLON
   36       | EXTERN • datatype ID ROUNDBRACKET_L params ROUNDBRACKET_R SEMICOLON

    BOOLTYPE   shift, and go to state 3
    FLOATTYPE  shift, and go to state 4
    INTTYPE    shift, and go to state 5
    VOIDTYPE   shift, and go to state 6

    datatype  go to state 15


State 3

  103 datatype: BOOLTYPE •

    $default  reduce using rule 103 (datatype)


State 4

  102 datatype: FLOATTYPE •

    $default  reduce using rule 102 (datatype)


State 5

  101 datatype: INTTYPE •

    $default  reduce using rule 101 (datatype)


State 6

  100 datatype: VOIDTYPE •

    $default  reduce using rule 100 (datatype)


State 7

    0 $accept: program • $end

    $end  shift, and go to state 16


State 8

    1 program: decls •

    $default  reduce using rule 1 (program)


State 9

    2 decls: decl • decls
    3      | decl •

    EXPORT     shift, and go to state 1
    EXTERN     shift, and go to state 2
    BOOLTYPE   shift, and go to state 3
    FLOATTYPE  shift, and go to state 4
    INTTYPE    shift, and go to state 5
    VOIDTYPE   shift, and go to state 6

    $default  reduce using rule 3 (decls)

    decls     go to state 17
    decl      go to state 9
    globdecl  go to state 10
    globdef   go to state 11
    fundef    go to state 12
    datatype  go to state 13


State 10

    5 decl: globdecl •

    $default  reduce using rule 5 (decl)


State 11

    4 decl: globdef •

    $default  reduce using rule 4 (decl)


State 12

    6 decl: fundef •

    $default  reduce using rule 6 (decl)


State 13

    9 globdef: datatype • ID SEMICOLON
   10        | datatype • SQUAREBRACKET_L exprs_dims SQUAREBRACKET_R ID SEMICOLON
   11        | datatype • ID LET expr SEMICOLON
   12        | datatype • SQUAREBRACKET_L exprs_dims SQUAREBRACKET_R ID LET expr SEMICOLON
   23 fundef: datatype • ID ROUNDBRACKET_L ROUNDBRACKET_R SEMICOLON
   24       | datatype • ID ROUNDBRACKET_L ROUNDBRACKET_R CURLYBRACKET_L CURLYBRACKET_R
   25       | datatype • ID ROUNDBRACKET_L ROUNDBRACKET_R CURLYBRACKET_L funbody CURLYBRACKET_R
   26       | datatype • ID ROUNDBRACKET_L params ROUNDBRACKET_R SEMICOLON
   27       | datatype • ID ROUNDBRACKET_L params ROUNDBRACKET_R CURLYBRACKET_L CURLYBRACKET_R
   28       | datatype • ID ROUNDBRACKET_L params ROUNDBRACKET_R CURLYBRACKET_L funbody CURLYBRACKET_R

    SQUAREBRACKET_L  shift, and go to state 18
    ID               shift, and go to state 19


State 14

   13 globdef: EXPORT datatype • ID SEMICOLON
   14        | EXPORT datatype • SQUAREBRACKET_L exprs_dims SQUAREBRACKET_R ID SEMICOLON
   15        | EXPORT datatype • ID LET expr SEMICOLON
   16        | EXPORT datatype • SQUAREBRACKET_L exprs_dims SQUAREBRACKET_R ID LET expr SEMICOLON
   29 fundef: EXPORT datatype • ID ROUNDBRACKET_L ROUNDBRACKET_R SEMICOLON
   30       | EXPORT datatype • ID ROUNDBRACKET_L ROUNDBRACKET_R CURLYBRACKET_L CURLYBRACKET_R
   31       | EXPORT datatype • ID ROUNDBRACKET_L ROUNDBRACKET_R CURLYBRACKET_L funbody CURLYBRACKET_R
   32       | EXPORT datatype • ID ROUNDBRACKET_L params ROUNDBRACKET_R SEMICOLON
   33       | EXPORT datatype • ID ROUNDBRACKET_L params ROUNDBRACKET_R CURLYBRACKET_L CURLYBRACKET_R
   34       | EXPORT datatype • ID ROUNDBRACKET_L params ROUNDBRACKET_R CURLYBRACKET_L funbody CURLYBRACKET_R

    SQUAREBRACKET_L  shift, and go to state 20
    ID               shift, and go to state 21


State 15

    7 globdecl: EXTERN datatype • ID SEMICOLON
    8         | EXTERN datatype • SQUAREBRACKET_L id_dims SQUAREBRACKET_R ID SEMICOLON
   35 fundef: EXTERN datatype • ID ROUNDBRACKET_L ROUNDBRACKET_R SEMICOLON
   36       | EXTERN datatype • ID ROUNDBRACKET_L params ROUNDBRACKET_R SEMICOLON

    SQUAREBRACKET_L  shift, and go to state 22
    ID               shift, and go to state 23


State 16

    0 $accept: program $end •

    $default  accept


State 17

    2 decls: decl decls •

    $default  reduce using rule 2 (decls)


State 18

   10 globdef: datatype SQUAREBRACKET_L • exprs_dims SQUAREBRACKET_R ID SEMICOLON
   12        | datatype SQUAREBRACKET_L • exprs_dims SQUAREBRACKET_R ID LET expr SEMICOLON

    ROUNDBRACKET_L  shift, and go to state 24
    NEG             shift, and go to state 25
    TRUEVAL         shift, and go to state 26
    FALSEVAL        shift, and go to state 27
    NUM             shift, and go to state 28
    FLOAT           shift, and go to state 29
    ID              shift, and go to state 30
    UMINUS          shift, and go to state 31

    funcall     go to state 32
    exprs_dims  go to state 33
    expr_dim    go to state 34
    cast        go to state 35
    expr        go to state 36
    constant    go to state 37
    floatval    go to state 38
    intval      go to state 39
    boolval     go to state 40


State 19

    9 globdef: datatype ID • SEMICOLON
   11        | datatype ID • LET expr SEMICOLON
   23 fundef: datatype ID • ROUNDBRACKET_L ROUNDBRACKET_R SEMICOLON
   24       | datatype ID • ROUNDBRACKET_L ROUNDBRACKET_R CURLYBRACKET_L CURLYBRACKET_R
   25       | datatype ID • ROUNDBRACKET_L ROUNDBRACKET_R CURLYBRACKET_L funbody CURLYBRACKET_R
   26       | datatype ID • ROUNDBRACKET_L params ROUNDBRACKET_R SEMICOLON
   27       | datatype ID • ROUNDBRACKET_L params ROUNDBRACKET_R CURLYBRACKET_L CURLYBRACKET_R
   28       | datatype ID • ROUNDBRACKET_L params ROUNDBRACKET_R CURLYBRACKET_L funbody CURLYBRACKET_R

    ROUNDBRACKET_L  shift, and go to state 41
    SEMICOLON       shift, and go to state 42
    LET             shift, and go to state 43


State 20

   14 globdef: EXPORT datatype SQUAREBRACKET_L • exprs_dims SQUAREBRACKET_R ID SEMICOLON
   16        | EXPORT datatype SQUAREBRACKET_L • exprs_dims SQUAREBRACKET_R ID LET expr SEMICOLON

    ROUNDBRACKET_L  shift, and go to state 24
    NEG             shift, and go to state 25
    TRUEVAL         shift, and go to state 26
    FALSEVAL        shift, and go to state 27
    NUM             shift, and go to state 28
    FLOAT           shift, and go to state 29
    ID              shift, and go to state 30
    UMINUS          shift, and go to state 31

    funcall     go to state 32
    exprs_dims  go to state 44
    expr_dim    go to state 34
    cast        go to state 35
    expr        go to state 36
    constant    go to state 37
    floatval    go to state 38
    intval      go to state 39
    boolval     go to state 40


State 21

   13 globdef: EXPORT datatype ID • SEMICOLON
   15        | EXPORT datatype ID • LET expr SEMICOLON
   29 fundef: EXPORT datatype ID • ROUNDBRACKET_L ROUNDBRACKET_R SEMICOLON
   30       | EXPORT datatype ID • ROUNDBRACKET_L ROUNDBRACKET_R CURLYBRACKET_L CURLYBRACKET_R
   31       | EXPORT datatype ID • ROUNDBRACKET_L ROUNDBRACKET_R CURLYBRACKET_L funbody CURLYBRACKET_R
   32       | EXPORT datatype ID • ROUNDBRACKET_L params ROUNDBRACKET_R SEMICOLON
   33       | EXPORT datatype ID • ROUNDBRACKET_L params ROUNDBRACKET_R CURLYBRACKET_L CURLYBRACKET_R
   34       | EXPORT datatype ID • ROUNDBRACKET_L params ROUNDBRACKET_R CURLYBRACKET_L funbody CURLYBRACKET_R

    ROUNDBRACKET_L  shift, and go to state 45
    SEMICOLON       shift, and go to state 46
    LET             shift, and go to state 47


State 22

    8 globdecl: EXTERN datatype SQUAREBRACKET_L • id_dims SQUAREBRACKET_R ID SEMICOLON

    ID  shift, and go to state 48

    id_dims  go to state 49
    id_dim   go to state 50


State 23

    7 globdecl: EXTERN datatype ID • SEMICOLON
   35 fundef: EXTERN datatype ID • ROUNDBRACKET_L ROUNDBRACKET_R SEMICOLON
   36       | EXTERN datatype ID • ROUNDBRACKET_L params ROUNDBRACKET_R SEMICOLON

    ROUNDBRACKET_L  shift, and go to state 51
    SEMICOLON       shift, and go to state 52


State 24

   72 cast: ROUNDBRACKET_L • datatype ROUNDBRACKET_R expr
   73 expr: ROUNDBRACKET_L • expr ROUNDBRACKET_R

    ROUNDBRACKET_L  shift, and go to state 24
    NEG             shift, and go to state 25
    TRUEVAL         shift, and go to state 26
    FALSEVAL        shift, and go to state 27
    BOOLTYPE        shift, and go to state 3
    FLOATTYPE       shift, and go to state 4
    INTTYPE         shift, and go to state 5
    VOIDTYPE        shift, and go to state 6
    NUM             shift, and go to state 28
    FLOAT           shift, and go to state 29
    ID              shift, and go to state 30
    UMINUS          shift, and go to state 31

    funcall   go to state 32
    cast      go to state 35
    expr      go to state 53
    constant  go to state 37
    floatval  go to state 38
    intval    go to state 39
    boolval   go to state 40
    datatype  go to state 54


State 25

   92 expr: NEG • expr

    ROUNDBRACKET_L  shift, and go to state 24
    NEG             shift, and go to state 25
    TRUEVAL         shift, and go to state 26
    FALSEVAL        shift, and go to state 27
    NUM             shift, and go to state 28
    FLOAT           shift, and go to state 29
    ID              shift, and go to state 30
    UMINUS          shift, and go to state 31

    funcall   go to state 32
    cast      go to state 35
    expr      go to state 55
    constant  go to state 37
    floatval  go to state 38
    intval    go to state 39
    boolval   go to state 40


State 26

   98 boolval: TRUEVAL •

    $default  reduce using rule 98 (boolval)


State 27

   99 boolval: FALSEVAL •

    $default  reduce using rule 99 (boolval)


State 28

   97 intval: NUM •

    $default  reduce using rule 97 (intval)


State 29

   96 floatval: FLOAT •

    $default  reduce using rule 96 (floatval)


State 30

   37 funcall: ID • ROUNDBRACKET_L args ROUNDBRACKET_R
   38        | ID • ROUNDBRACKET_L ROUNDBRACKET_R
   76 expr: ID •

    ROUNDBRACKET_L  shift, and go to state 56

    $default  reduce using rule 76 (expr)


State 31

   91 expr: UMINUS • expr

    ROUNDBRACKET_L  shift, and go to state 24
    NEG             shift, and go to state 25
    TRUEVAL         shift, and go to state 26
    FALSEVAL        shift, and go to state 27
    NUM             shift, and go to state 28
    FLOAT           shift, and go to state 29
    ID              shift, and go to state 30
    UMINUS          shift, and go to state 31

    funcall   go to state 32
    cast      go to state 35
    expr      go to state 57
    constant  go to state 37
    floatval  go to state 38
    intval    go to state 39
    boolval   go to state 40


State 32

   75 expr: funcall •

    $default  reduce using rule 75 (expr)


State 33

   10 globdef: datatype SQUAREBRACKET_L exprs_dims • SQUAREBRACKET_R ID SEMICOLON
   12        | datatype SQUAREBRACKET_L exprs_dims • SQUAREBRACKET_R ID LET expr SEMICOLON

    SQUAREBRACKET_R  shift, and go to state 58


State 34

   52 exprs_dims: expr_dim • COMMA exprs_dims
   53           | expr_dim •

    COMMA  shift, and go to state 59

    $default  reduce using rule 53 (exprs_dims)


State 35

   74 expr: cast •

    $default  reduce using rule 74 (expr)


State 36

   57 expr_dim: expr •
   78 expr: expr • PLUS expr
   79     | expr • MINUS expr
   80     | expr • STAR expr
   81     | expr • SLASH expr
   82     | expr • PERCENT expr
   83     | expr • LT expr
   84     | expr • LE expr
   85     | expr • GT expr
   86     | expr • GE expr
   87     | expr • EQ expr
   88     | expr • NE expr
   89     | expr • OR expr
   90     | expr • AND expr

    MINUS    shift, and go to state 60
    PLUS     shift, and go to state 61
    STAR     shift, and go to state 62
    SLASH    shift, and go to state 63
    PERCENT  shift, and go to state 64
    LE       shift, and go to state 65
    LT       shift, and go to state 66
    GE       shift, and go to state 67
    GT       shift, and go to state 68
    EQ       shift, and go to state 69
    NE       shift, and go to state 70
    OR       shift, and go to state 71
    AND      shift, and go to state 72

    $default  reduce using rule 57 (expr_dim)


State 37

   77 expr: constant •

    $default  reduce using rule 77 (expr)


State 38

   93 constant: floatval •

    $default  reduce using rule 93 (constant)


State 39

   94 constant: intval •

    $default  reduce using rule 94 (constant)


State 40

   95 constant: boolval •

    $default  reduce using rule 95 (constant)


State 41

   23 fundef: datatype ID ROUNDBRACKET_L • ROUNDBRACKET_R SEMICOLON
   24       | datatype ID ROUNDBRACKET_L • ROUNDBRACKET_R CURLYBRACKET_L CURLYBRACKET_R
   25       | datatype ID ROUNDBRACKET_L • ROUNDBRACKET_R CURLYBRACKET_L funbody CURLYBRACKET_R
   26       | datatype ID ROUNDBRACKET_L • params ROUNDBRACKET_R SEMICOLON
   27       | datatype ID ROUNDBRACKET_L • params ROUNDBRACKET_R CURLYBRACKET_L CURLYBRACKET_R
   28       | datatype ID ROUNDBRACKET_L • params ROUNDBRACKET_R CURLYBRACKET_L funbody CURLYBRACKET_R

    ROUNDBRACKET_R  shift, and go to state 73
    BOOLTYPE        shift, and go to state 3
    FLOATTYPE       shift, and go to state 4
    INTTYPE         shift, and go to state 5
    VOIDTYPE        shift, and go to state 6

    params    go to state 74
    param     go to state 75
    datatype  go to state 76


State 42

    9 globdef: datatype ID SEMICOLON •

    $default  reduce using rule 9 (globdef)


State 43

   11 globdef: datatype ID LET • expr SEMICOLON

    ROUNDBRACKET_L  shift, and go to state 24
    NEG             shift, and go to state 25
    TRUEVAL         shift, and go to state 26
    FALSEVAL        shift, and go to state 27
    NUM             shift, and go to state 28
    FLOAT           shift, and go to state 29
    ID              shift, and go to state 30
    UMINUS          shift, and go to state 31

    funcall   go to state 32
    cast      go to state 35
    expr      go to state 77
    constant  go to state 37
    floatval  go to state 38
    intval    go to state 39
    boolval   go to state 40


State 44

   14 globdef: EXPORT datatype SQUAREBRACKET_L exprs_dims • SQUAREBRACKET_R ID SEMICOLON
   16        | EXPORT datatype SQUAREBRACKET_L exprs_dims • SQUAREBRACKET_R ID LET expr SEMICOLON

    SQUAREBRACKET_R  shift, and go to state 78


State 45

   29 fundef: EXPORT datatype ID ROUNDBRACKET_L • ROUNDBRACKET_R SEMICOLON
   30       | EXPORT datatype ID ROUNDBRACKET_L • ROUNDBRACKET_R CURLYBRACKET_L CURLYBRACKET_R
   31       | EXPORT datatype ID ROUNDBRACKET_L • ROUNDBRACKET_R CURLYBRACKET_L funbody CURLYBRACKET_R
   32       | EXPORT datatype ID ROUNDBRACKET_L • params ROUNDBRACKET_R SEMICOLON
   33       | EXPORT datatype ID ROUNDBRACKET_L • params ROUNDBRACKET_R CURLYBRACKET_L CURLYBRACKET_R
   34       | EXPORT datatype ID ROUNDBRACKET_L • params ROUNDBRACKET_R CURLYBRACKET_L funbody CURLYBRACKET_R

    ROUNDBRACKET_R  shift, and go to state 79
    BOOLTYPE        shift, and go to state 3
    FLOATTYPE       shift, and go to state 4
    INTTYPE         shift, and go to state 5
    VOIDTYPE        shift, and go to state 6

    params    go to state 80
    param     go to state 75
    datatype  go to state 76


State 46

   13 globdef: EXPORT datatype ID SEMICOLON •

    $default  reduce using rule 13 (globdef)


State 47

   15 globdef: EXPORT datatype ID LET • expr SEMICOLON

    ROUNDBRACKET_L  shift, and go to state 24
    NEG             shift, and go to state 25
    TRUEVAL         shift, and go to state 26
    FALSEVAL        shift, and go to state 27
    NUM             shift, and go to state 28
    FLOAT           shift, and go to state 29
    ID              shift, and go to state 30
    UMINUS          shift, and go to state 31

    funcall   go to state 32
    cast      go to state 35
    expr      go to state 81
    constant  go to state 37
    floatval  go to state 38
    intval    go to state 39
    boolval   go to state 40


State 48

   56 id_dim: ID •

    $default  reduce using rule 56 (id_dim)


State 49

    8 globdecl: EXTERN datatype SQUAREBRACKET_L id_dims • SQUAREBRACKET_R ID SEMICOLON

    SQUAREBRACKET_R  shift, and go to state 82


State 50

   54 id_dims: id_dim • COMMA id_dims
   55        | id_dim •

    COMMA  shift, and go to state 83

    $default  reduce using rule 55 (id_dims)


State 51

   35 fundef: EXTERN datatype ID ROUNDBRACKET_L • ROUNDBRACKET_R SEMICOLON
   36       | EXTERN datatype ID ROUNDBRACKET_L • params ROUNDBRACKET_R SEMICOLON

    ROUNDBRACKET_R  shift, and go to state 84
    BOOLTYPE        shift, and go to state 3
    FLOATTYPE       shift, and go to state 4
    INTTYPE         shift, and go to state 5
    VOIDTYPE        shift, and go to state 6

    params    go to state 85
    param     go to state 75
    datatype  go to state 76


State 52

    7 globdecl: EXTERN datatype ID SEMICOLON •

    $default  reduce using rule 7 (globdecl)


State 53

   73 expr: ROUNDBRACKET_L expr • ROUNDBRACKET_R
   78     | expr • PLUS expr
   79     | expr • MINUS expr
   80     | expr • STAR expr
   81     | expr • SLASH expr
   82     | expr • PERCENT expr
   83     | expr • LT expr
   84     | expr • LE expr
   85     | expr • GT expr
   86     | expr • GE expr
   87     | expr • EQ expr
   88     | expr • NE expr
   89     | expr • OR expr
   90     | expr • AND expr

    ROUNDBRACKET_R  shift, and go to state 86
    MINUS           shift, and go to state 60
    PLUS            shift, and go to state 61
    STAR            shift, and go to state 62
    SLASH           shift, and go to state 63
    PERCENT         shift, and go to state 64
    LE              shift, and go to state 65
    LT              shift, and go to state 66
    GE              shift, and go to state 67
    GT              shift, and go to state 68
    EQ              shift, and go to state 69
    NE              shift, and go to state 70
    OR              shift, and go to state 71
    AND             shift, and go to state 72


State 54

   72 cast: ROUNDBRACKET_L datatype • ROUNDBRACKET_R expr

    ROUNDBRACKET_R  shift, and go to state 87


State 55

   78 expr: expr • PLUS expr
   79     | expr • MINUS expr
   80     | expr • STAR expr
   81     | expr • SLASH expr
   82     | expr • PERCENT expr
   83     | expr • LT expr
   84     | expr • LE expr
   85     | expr • GT expr
   86     | expr • GE expr
   87     | expr • EQ expr
   88     | expr • NE expr
   89     | expr • OR expr
   90     | expr • AND expr
   92     | NEG expr •

    $default  reduce using rule 92 (expr)


State 56

   37 funcall: ID ROUNDBRACKET_L • args ROUNDBRACKET_R
   38        | ID ROUNDBRACKET_L • ROUNDBRACKET_R

    ROUNDBRACKET_L  shift, and go to state 24
    ROUNDBRACKET_R  shift, and go to state 88
    NEG             shift, and go to state 25
    TRUEVAL         shift, and go to state 26
    FALSEVAL        shift, and go to state 27
    NUM             shift, and go to state 28
    FLOAT           shift, and go to state 29
    ID              shift, and go to state 30
    UMINUS          shift, and go to state 31

    funcall   go to state 32
    args      go to state 89
    arg       go to state 90
    cast      go to state 35
    expr      go to state 91
    constant  go to state 37
    floatval  go to state 38
    intval    go to state 39
    boolval   go to state 40


State 57

   78 expr: expr • PLUS expr
   79     | expr • MINUS expr
   80     | expr • STAR expr
   81     | expr • SLASH expr
   82     | expr • PERCENT expr
   83     | expr • LT expr
   84     | expr • LE expr
   85     | expr • GT expr
   86     | expr • GE expr
   87     | expr • EQ expr
   88     | expr • NE expr
   89     | expr • OR expr
   90     | expr • AND expr
   91     | UMINUS expr •

    $default  reduce using rule 91 (expr)


State 58

   10 globdef: datatype SQUAREBRACKET_L exprs_dims SQUAREBRACKET_R • ID SEMICOLON
   12        | datatype SQUAREBRACKET_L exprs_dims SQUAREBRACKET_R • ID LET expr SEMICOLON

    ID  shift, and go to state 92


State 59

   52 exprs_dims: expr_dim COMMA • exprs_dims
